--- a/index.html
+++ b/index.html
@@ -5,130 +5,247 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text APP</title>
-   
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Iceland&display=swap');
+
+        body {
+            background-color: #c8c8ca;
+            font-family: 'Iceland', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 30vw;
+            background-color: #0b0909;
+            padding: 1rem;
+            color: white;
+            border-radius: 1%;
+            box-shadow: 17px 27px 8px rgb(45, 45, 45);
+            text-align: center;
+
+        }
+
+        h1 {
+
+            font-size: 3rem;
+            font-family: 'Iceland', sans-serif;
+            letter-spacing: .2rem;
+            font-weight: 800;
+            color: #939292;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            width: 80%;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 1rem .5rem .5rem .5rem;
+            font-size: 1.2rem;
+            border: 1px solid #ccc;
+            border-radius: 2%;
+            font-family: 'Arial', sans-serif;
+            font-weight: 400;
+            outline: none;
+            border: none;
+            border-bottom: 1px solid rgb(242, 242, 247);
+            border-bottom-right-radius: .2rem;
+            border-bottom-left-radius: .2rem;
+            background-color: transparent;
+            color: white;
+        }
+
+        input[type="text"]:focus {
+            background: transparent;
+            border-bottom: 3px solid #007bff;
+            border-bottom-right-radius: .2rem;
+            border-bottom-left-radius: .2rem;
+            color: rgb(234, 230, 230);
+
+        }
+
+
+        input[type="text"]::placeholder {
+
+            font-family: 'Iceland', sans-serif;
+        }
+
+        button {
+            padding: 12px;
+            font-size: 1.3rem;
+            color: white;
+            letter-spacing: .1rem;
+            background: linear-gradient(135deg, #007bff, #0056b3);
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+            font-family: 'Iceland', sans-serif;
+            font-weight: 400;
+            transition: all .4s ease;
+        }
+
+        button:hover {
+            transform: scale(1.05);
+            background: linear-gradient(135deg, #0260c4, #01172f);
+
+        }
+
+        #btnDecopy {
+            padding: 12px;
+            font-size: 1.3rem;
+            color: white;
+            letter-spacing: .1rem;
+            background: linear-gradient(135deg, #007bff, #0056b3);
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+            font-family: 'Iceland', sans-serif;
+            font-weight: 400;
+            transition: all .4s ease;
+            max-width: 30%;
+
+        }
+
+        #btnDecopy:hover {
+
+            transform: scale(1.05);
+            background: linear-gradient(135deg, #0260c4, #01172f);
+        }
+
+        #copymessage {
+
+            font-size: .8rem;
+        }
+
+
+
+
+        @media (max-width:768px) {
+
+
+            div {
+                width: 70vw;
+                /* Increase width for smaller screens */
+                padding: 1.2rem;
+                display: flex;
+                box-shadow: 12px 17px 6px rgb(55, 55, 55);
+                text-align: center;
+
+
+
+
+            }
+
+            h1 {
+                font-size: 2rem;
+                /* Adjust font size */
+            }
+
+            input[type="text"] {
+                max-width: 95%;
+                font-size: 1rem;
+                background: transparent;
+                /* Adjust font size for inputs and buttons */
+            }
+
+            button {
+
+                max-width: 90%;
+                font-size: 1rem;
+
+            }
+
+            #btnDecopy {
+                max-width: 40%;
+                /* Make the copy button take the full width */
+            }
+
+            form {
+                width: 100%;
+                /* Ensure form fills the container */
+            }
+
+            #copyMessage {
+                font-size: 0.8rem;
+                /* Adjust copy message font size */
+            }
+        }
+    </style>
 </head>
-<style>
-    /* styles.css */
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f5; /* Light neutral background */
-}
-
-div {
-    background: #ffffff; /* White background */
-    padding: 30px;
-    border-radius: 15px;
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2); /* 3D box shadow */
-    text-align: center;
-    width: 350px;
-}
-
-h1 {
-    margin-bottom: 20px;
-    font-size: 1.8rem;
-    color: #333; /* Neutral text color */
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-input[type="text"] {
-    width: 100%;
-    padding: 12px;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s, border-color 0.3s;
-}
-
-input[type="text"]:focus {
-    border-color: #007bff; /* Blue border on focus */
-    box-shadow: 0 0 8px rgba(0, 123, 255, 0.6);
-    outline: none;
-}
-
-button {
-    padding: 12px;
-    font-size: 1rem;
-    color: white;
-    background: linear-gradient(135deg, #007bff, #0056b3); /* Gradient background */
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: transform 0.3s, box-shadow 0.3s;
-    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); /* Initial shadow */
-}
-
-button:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 12px 25px rgba(0, 0, 0, 0.3); /* Larger shadow on hover */
-}
-
-button:active {
-    transform: translateY(2px);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Reduced shadow on click */
-}
-
-button:focus {
-    outline: none;
-}
-
-</style>
 
 <body>
     <div>
-        <h1>Encode || Decode</h1>
+        <h1>&lt;Encode&gt;&lt;/Decode&gt;
+        </h1>
         <form>
             <input type="text" id="textInput" placeholder="Enter text">
             <button id="btnEncode" type="button">Encode</button>
             <button id="btnDecode" type="button">Decode</button>
-            <input type="text" id="outputBox" placeholder="Result" readonly>
+            <input type="text" id="outputBox" placeholder="Result">
+            <button id="btnDecopy" type="button">Copy</button>
         </form>
+        <p id="copyMessage"></p>
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const textInput = document.getElementById('textInput');
             const outputBox = document.getElementById('outputBox');
+            const copyMessage = document.getElementById('copyMessage');
+
+            const secretKey = "hardToGuessSecret";
 
             // Encoding Logic
             function encodeMessage(text) {
-                const encoded = text
-                    .toLowerCase()
-                    .split('') // Split text into individual characters
-                    .map(char => {
-                        if (char >= 'a' && char <= 'z') {
-                            // Map 'a' to -26, 'b' to -25, ..., 'z' to 0
-                            return char.charCodeAt(0) - 'a'.charCodeAt(0) - 26;
-                        }
-                        return char; // Keep non-alphabetic characters as is
-                    })
-                    .join(' '); // Join the characters back into a string with spaces
-                return encoded;
+                try {
+                    let encoded = text.split('').map((char, index) => {
+                        const keyByte = secretKey.charCodeAt(index % secretKey.length);
+                        return String.fromCharCode(char.charCodeAt(0) ^ keyByte);
+                    }).join('');
+
+                    encoded = encoded.replace(/ /g, "__SPACE__"); // Handle spaces
+                    for (let i = 0; i < 4; i++) {
+                        encoded = btoa(encoded);
+                    }
+                    return encoded;
+                } catch (error) {
+                    alert("Error encoding text. Ensure valid characters are used.");
+                    console.error(error);
+                    return "";
+                }
             }
 
             // Decoding Logic
             function decodeMessage(encodedText) {
-                const decoded = encodedText
-                    .split(' ') // Split the encoded text into components
-                    .map(code => {
-                        if (!isNaN(code)) {
-                            const num = parseInt(code, 10) + 26; // Convert back to 0-25 range
-                            return String.fromCharCode(num + 'a'.charCodeAt(0)); // Get letter
-                        }
-                        return code; // Keep non-alphabetic characters as is
-                    })
-                    .join(''); // Join back into a single string
-                return decoded;
+                try {
+                    let decoded = encodedText;
+                    for (let i = 0; i < 4; i++) {
+                        decoded = atob(decoded);
+                    }
+
+                    decoded = decoded.replace(/__SPACE__/g, ' '); // Handle spaces
+                    decoded = decoded.split('').map((char, index) => {
+                        const keyByte = secretKey.charCodeAt(index % secretKey.length);
+                        return String.fromCharCode(char.charCodeAt(0) ^ keyByte);
+                    }).join('');
+
+                    return decoded;
+                } catch (error) {
+                    alert("Error decoding text. Ensure it is valid encoded text.");
+                    console.error(error);
+                    return "";
+                }
             }
 
             // Encode Button Event
@@ -138,19 +255,49 @@ button:focus {
                     alert('Please enter text to encode.');
                     return;
                 }
-                outputBox.value = encodeMessage(text);
+                try {
+                    outputBox.value = encodeMessage(text);
+                } catch {
+                    alert("Error encoding the text!");
+                }
             });
 
             // Decode Button Event
             document.getElementById('btnDecode').addEventListener('click', () => {
                 const encodedText = textInput.value.trim();
                 if (encodedText === '') {
-                    alert('Please enter text to decode.');
+                    alert('Please enter encoded text to decode.');
                     return;
                 }
-                outputBox.value = decodeMessage(encodedText);
+                try {
+                    outputBox.value = decodeMessage(encodedText);
+                } catch {
+                    alert("Error decoding the text!");
+                }
             });
         });
+
+
+        // to copy text
+
+        document.getElementById('btnDecopy').addEventListener('click', () => {
+            const textToCopy = outputBox.value.trim();
+
+            if (textToCopy === '') {
+                copyMessage.textContent = "Nothing to copy!";
+                return;
+            }
+
+            // Copy text to clipboard
+            navigator.clipboard.writeText(textToCopy).then(() => {
+                copyMessage.textContent = `Copied: ${textToCopy}`;
+                copyMessage.style.color = "green";
+            }).catch(() => {
+                copyMessage.textContent = "Failed to copy!";
+                copyMessage.style.color = "red";
+            });
+        });
+
     </script>
 </body>
 
